starting to build exploration subsection

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -179,6 +179,15 @@
   doi = {10.1146/annurev-control-042920-020211}
 }
 
+@article{burda2018exploration,
+  title = {Exploration by Random Network Distillation},
+  author = {Burda, Yuri and Edwards, Harrison and Storkey, Amos and Klimov, Oleg},
+  year = 2018,
+  journal = {arXiv preprint arXiv:1810.12894},
+  eprint = {1810.12894},
+  archiveprefix = {arXiv}
+}
+
 @article{burkart2021survey,
   title = {A Survey on the Explainability of Supervised Machine Learning},
   author = {Burkart, Nadia and Huber, Marco F},
@@ -387,6 +396,17 @@
   year = 2023,
   journal = {IEEE Transactions on Neural Networks and Learning Systems},
   publisher = {IEEE}
+}
+
+@article{grippo1986nonmonotone,
+  title = {A Nonmonotone Line Search Technique for {{Newton}}'s Method},
+  author = {Grippo, Luigi and Lampariello, Francesco and Lucidi, Stefano},
+  year = 1986,
+  journal = {SIAM journal on Numerical Analysis},
+  volume = {23},
+  number = {4},
+  pages = {707--716},
+  publisher = {SIAM}
 }
 
 @article{guting1994introduction,
@@ -639,6 +659,15 @@
   volume = {32}
 }
 
+@inproceedings{pathak2017curiosity,
+  title = {Curiosity-Driven Exploration by Self-Supervised Prediction},
+  booktitle = {International Conference on Machine Learning},
+  author = {Pathak, Deepak and Agrawal, Pulkit and Efros, Alexei A and Darrell, Trevor},
+  year = 2017,
+  pages = {2778--2787},
+  publisher = {PMLR}
+}
+
 @article{pedregosaScikitlearnMachineLearning2012,
   title = {Scikit-Learn: {{Machine Learning}} in {{Python}}},
   author = {Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and M{\"u}ller, Andreas and Nothman, Joel and Louppe, Gilles and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, {\'E}douard},
@@ -718,6 +747,24 @@
   keywords = {C4.5,CART,Decision tree,Gain Ratio,Gini Index,Information Gain,Length,Minimum Description,Oblivious Decision Trees,Pruning}
 }
 
+@inproceedings{ruiz2015general,
+  title = {A General Algorithm for Exploration with Gaussian Processes in Complex, Unknown Environments},
+  booktitle = {2015 {{IEEE}} International Conference on Robotics and Automation ({{ICRA}})},
+  author = {Ruiz, Alberto Viseras and Olariu, Calin},
+  year = 2015,
+  pages = {3388--3393},
+  publisher = {IEEE}
+}
+
+@inproceedings{schulman2015trust,
+  title = {Trust Region Policy Optimization},
+  booktitle = {International Conference on Machine Learning},
+  author = {Schulman, John and Levine, Sergey and Abbeel, Pieter and Jordan, Michael and Moritz, Philipp},
+  year = 2015,
+  pages = {1889--1897},
+  publisher = {PMLR}
+}
+
 @article{schulzTutorialGaussianProcess2018,
   title = {A Tutorial on {{Gaussian}} Process Regression: {{Modelling}}, Exploring, and Exploiting Functions},
   author = {Schulz, Eric and Speekenbrink, Maarten and Krause, Andreas},
@@ -776,6 +823,15 @@
   volume = {18}
 }
 
+@article{srinivas2009gaussian,
+  title = {Gaussian Process Optimization in the Bandit Setting: {{No}} Regret and Experimental Design},
+  author = {Srinivas, Niranjan and Krause, Andreas and Kakade, Sham M and Seeger, Matthias},
+  year = 2009,
+  journal = {arXiv preprint arXiv:0912.3995},
+  eprint = {0912.3995},
+  archiveprefix = {arXiv}
+}
+
 @article{stable-baselines3,
   title = {Stable-Baselines3: {{Reliable}} Reinforcement Learning Implementations},
   author = {Raffin, Antonin and Hill, Ashley and Gleave, Adam and Kanervisto, Anssi and Ernestus, Maximilian and Dormann, Noah},
@@ -811,6 +867,17 @@
   journal = {arXiv preprint arXiv:2407.17032},
   eprint = {2407.17032},
   archiveprefix = {arXiv}
+}
+
+@article{uhlenbeck1930theory,
+  title = {On the Theory of the {{Brownian}} Motion},
+  author = {Uhlenbeck, George E and Ornstein, Leonard S},
+  year = 1930,
+  journal = {Physical review},
+  volume = {36},
+  number = {5},
+  pages = {823},
+  publisher = {APS}
 }
 
 @book{weisbergAppliedLinearRegression2005,
