--- a/manuscript.lyx
+++ b/manuscript.lyx
@@ -887,6 +887,22 @@ Epistemic uncertainty
 Optimal Control
 \end_layout
 
+\begin_layout Subsection
+Control with Learned Models
+\end_layout
+
+\begin_layout Subsubsection
+Reinforcement Learning
+\end_layout
+
+\begin_layout Subsubsection
+Model-Based approaches
+\end_layout
+
+\begin_layout Subsubsection
+Exploration
+\end_layout
+
 \begin_layout Section
 Positioning
 \end_layout
@@ -13417,12 +13433,40 @@ where
 \end_inset
 
 .
- Solving this QP yields an updated trajectory 
+\end_layout
+
+\begin_layout Standard
+Solving this QP yields a new trajectory 
 \begin_inset Formula $\tau_{t+1}$
 \end_inset
 
-,
- and the process is repeated until convergence.
+ than is used to compute a descent direction 
+\begin_inset Formula $\tau_{t+1}-\tau_{t}$
+\end_inset
+
+.
+ Since both SQP and kCELL rely on locally valid approximations of the dynamics,
+ the update step must be restricted to remain within the region where the linearization is accurate.
+ To this end,
+ a line search 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "grippo1986nonmonotone"
+literal "false"
+
+\end_inset
+
+ or trust-region strategy 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "schulman2015trust"
+literal "false"
+
+\end_inset
+
+ is typically employed to determine an appropriate step size that keeps linearization error contained and ensures sufficient cost decrease.
+ This mechanism guarantees stable convergence when optimization trajectories with learned dynamics.
+ The process is repeated until convergence.
 \end_layout
 
 \begin_layout Standard
@@ -13493,12 +13537,240 @@ name "sec:Exploration-MPC"
 \end_layout
 
 \begin_layout Standard
+The integration of kCELL into SQP framework provides a solid and efficient way of exploiting current model knowledge.
+ However,
+ the performances of any model-based controller is bounded by the quality of the learned dynamics.
+ In settings where no prior knowledge of the system is available,
+ the controller must balance the minization of the task cost with the need to collect informative data in unknownn or poorly modeled regions of the state-action space.
+\end_layout
+
+\begin_layout Standard
+Conventional exploration methods typically depend on heuristic noise processes (e.g Ornstein-Uhlenbeck noise 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "uhlenbeck1930theory"
+literal "false"
+
+\end_inset
+
+) or on uncertainty-based mechanisms,
+ such as those leveraged in Gaussian Processes 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "srinivas2009gaussian,ruiz2015general"
+literal "false"
+
+\end_inset
+
+,
+ Curiosity-driven exploration 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "pathak2017curiosity"
+literal "false"
+
+\end_inset
+
+,
+ and Random Network Distillation 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "burda2018exploration"
+literal "false"
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+kCELL's spatialized agent-based architecture provides two distinct introspection signals that can be directly embedded into the MPC objective function to drive exploration of unknown states:
+ distance-based competence and local model disagreement.
+ The new cost function to minimize is
+\begin_inset Formula 
+\[
+J\left(s_{t},u_{t}\right)=\alpha J_{\text{task}}\left(s_{t},u_{t}\right)+\lambda J_{\text{explore}}\left(s_{t},u_{t}\right)
+\]
+
+\end_inset
+
+where 
+\begin_inset Formula $J_{\text{task}}$
+\end_inset
+
+ is the task-related cost function,
+ 
+\begin_inset Formula $J_{\text{explore}}$
+\end_inset
+
+ the exploration penalty,
+ and 
+\begin_inset Formula $\alpha\in\mathbb{R},\,\lambda\in\mathbb{R}$
+\end_inset
+
+ the adjustment weights to trade-off task exploitation and exploration.
+\end_layout
+
+\begin_layout Standard
 \begin_inset Note Comment
 status open
 
 \begin_layout Plain Layout
-Because 
+Add a sentence to ground the singularity of using kCELL here => for now positioning is not clear.
 \end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Distance-based Competence
+\begin_inset CommandInset label
+LatexCommand label
+name "subsec:Distance-based-Competence"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Unlike opaque black-box models,
+ kCELL provides an explicit measure of its knowledge about specific regions of the feature space through the spatial distribution of agents.
+ To encourage exploration,
+ the model must acquire data that lie outside the currently covered regions,
+ that is to say,
+ beyond its existing knowledge.
+ The degree of knowledge can be quantified by evaluating the Mahalanobis distance between a given state-action pair and the closest agents.
+\end_layout
+
+\begin_layout Standard
+The objective is to drive the state-action trajectories away from the current knowledge-base.
+ To achieve this,
+ we introduce a distance-based penalty term 
+\begin_inset Formula $p_{\text{dist}}\left(x_{t}\right)$
+\end_inset
+
+ that augments the MPC cost function by promoting exploration of unknown regions such as
+\begin_inset Formula 
+\begin{eqnarray}
+p_{\text{dist}}\left(x_{t}\right) & = & -\sum_{i\in D_{\text{closest}}}w_{i}\left(x_{t}\right)\left(\left(x_{t}-\mu_{i}\right)^{\top}\Sigma_{i}^{-1}\left(x_{t}-\mu_{i}\right)\right)\\
+ & = & -\sum_{i\in D_{\text{closest}}}w_{i}\left(x_{t}\right)d\left(\mathcal{A}_{i},x_{t}\right)^{2}
+\end{eqnarray}
+
+\end_inset
+
+where 
+\begin_inset Formula $x_{t}=\left[s_{t},u_{t}\right]$
+\end_inset
+
+,
+ 
+\begin_inset Formula $D_{\text{closest}}$
+\end_inset
+
+is the set of the 
+\begin_inset Formula $k$
+\end_inset
+
+-closest agents,
+ 
+\begin_inset Formula $\mu_{i}$
+\end_inset
+
+ and 
+\begin_inset Formula $\Sigma_{i}$
+\end_inset
+
+ are the parameters of their activation function.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $p_{\text{dist}}\ll0$
+\end_inset
+
+ means that 
+\begin_inset Formula $x_{t}$
+\end_inset
+
+ is currently far from the current knowledge base.
+ Conversely ,
+ 
+\begin_inset Formula $p_{\text{dist}}\approx0$
+\end_inset
+
+ means that 
+\begin_inset Formula $x_{t}$
+\end_inset
+
+ is close to a known region of feature space and thus is probably already including in the current knowledge base.
+\end_layout
+
+\begin_layout Subsection
+Local Disagreement
+\begin_inset CommandInset label
+LatexCommand label
+name "subsec:Local-Disagreement"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+In regions where multiple agents are close,
+ the variance between their individual predictions serves as a proxy for aleatoric uncertainty or model inconsistency.
+ High disagreement suggests that the local dynamics are either stochastic
+\begin_inset space ~
+\end_inset
+
+noisy or that the model has not yet converged to a stable local representation.
+\end_layout
+
+\begin_layout Standard
+The objective is to drive the state-action trajectories in high disagreement regions to force the model to discover new area or to converge in already known region of feature space (similar to 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "srinivas2009gaussian,ruiz2015general,pathak2017curiosity,burda2018exploration"
+literal "false"
+
+\end_inset
+
+).
+ To achieve this,
+ we introduce a disagreement-based penalty term 
+\begin_inset Formula $p_{\text{disagree}}\left(x_{t}\right)$
+\end_inset
+
+ that augments the MPC cost function by promoting exploration of highly uncertain region of feature space,
+ such as
+\begin_inset Formula 
+\begin{eqnarray}
+p_{\text{disagree}}\left(x_{t}\right) & = & -\sum_{i\in D_{\text{closest}}}w_{i}\left(x_{t}\right)\left\Vert f\left(x_{t}\right)-f_{i}\left(x_{t}\right)\right\Vert ^{2}
+\end{eqnarray}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Comparative Study
+\begin_inset CommandInset label
+LatexCommand label
+name "subsec:Exploration-Comparative-Study"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Discussions and Limitations
+\begin_inset CommandInset label
+LatexCommand label
+name "subsec:Exploration-Discussions-and-Limitations"
 
 \end_inset
 
