Finishing conservatism subsection

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -99,6 +99,15 @@
   publisher = {Springer}
 }
 
+@inproceedings{blundell2015weight,
+  title = {Weight Uncertainty in Neural Network},
+  booktitle = {International Conference on Machine Learning},
+  author = {Blundell, Charles and Cornebise, Julien and Kavukcuoglu, Koray and Wierstra, Daan},
+  year = 2015,
+  pages = {1613--1622},
+  publisher = {PMLR}
+}
+
 @incollection{boesSelfAdaptiveContextLearning2015,
   title = {The {{Self-Adaptive Context Learning Pattern}}: {{Overview}} and {{Proposal}}},
   booktitle = {{{SpringerLink}}},
@@ -266,6 +275,13 @@
   abstract = {Model-based reinforcement learning (RL) algorithms can attain excellent sample efficiency, but often lag behind the best model-free algorithms in terms of asymptotic performance. This is especially true with high-capacity parametric function approximators, such as deep networks. In this paper, we study how to bridge this gap, by employing uncertainty-aware dynamics models. We propose a new algorithm called probabilistic ensembles with trajectory sampling (PETS) that combines uncertainty-aware deep network dynamics models with sampling-based uncertainty propagation. Our comparison to state-of-the-art model-based and model-free deep RL algorithms shows that our approach matches the asymptotic performance of model-free algorithms on several challenging benchmark tasks, while requiring significantly fewer samples (e.g., 8 and 125 times fewer samples than Soft Actor Critic and Proximal Policy Optimization respectively on the half-cheetah task).},
   langid = {english},
   keywords = {Artificial Intelligence (cs.AI),Machine Learning (cs.LG),Machine Learning (stat.ML),Robotics (cs.RO)}
+}
+
+@book{conn2000trust,
+  title = {Trust Region Methods},
+  author = {Conn, Andrew R and Gould, Nicholas IM and Toint, Philippe L},
+  year = 2000,
+  publisher = {SIAM}
 }
 
 @phdthesis{dato2021apprentissage,
@@ -840,6 +856,17 @@
   volume = {22},
   number = {268},
   pages = {1--8}
+}
+
+@article{stellato2020osqp,
+  title = {{{OSQP}}: {{An}} Operator Splitting Solver for Quadratic Programs},
+  author = {Stellato, Bartolomeo and Banjac, Goran and Goulart, Paul and Bemporad, Alberto and Boyd, Stephen},
+  year = 2020,
+  journal = {Mathematical Programming Computation},
+  volume = {12},
+  number = {4},
+  pages = {637--672},
+  publisher = {Springer}
 }
 
 @inproceedings{titsias2009variational,
